Adding the first of many

--- a/assets/minecraft/lang/en_US.lang
+++ b/assets/minecraft/lang/en_US.lang
@@ -941,7 +941,7 @@ item.beefRaw.name=Raw Beef
 item.beefCooked.name=Steak
 item.painting.name=Painting
 item.frame.name=Item Frame
-item.appleGold.name=Golden Apple
+item.appleGold.name=Gayolden Apple
 item.sign.name=Sign
 item.doorOak.name=Oak Door
 item.doorSpruce.name=Spruce Door
@@ -976,11 +976,11 @@ item.compass.name=Compass
 item.fishingRod.name=Fishing Rod
 item.clock.name=Clock
 item.yellowDust.name=Glowstone Dust
-item.fish.cod.raw.name=Raw Fish
+item.fish.cod.raw.name=Raw Like Button
 item.fish.salmon.raw.name=Raw Salmon
 item.fish.pufferfish.raw.name=Pufferfish
 item.fish.clownfish.raw.name=Clownfish
-item.fish.cod.cooked.name=Cooked Fish
+item.fish.cod.cooked.name=Cooked Like Button
 item.fish.salmon.cooked.name=Cooked Salmon
 item.record.name=Music Disc
 item.record.13.desc=C418 - 13
