Added item titles and items
- Changed all Record title names
- Added the Raw and Cooked fish icons

--- a/assets/minecraft/lang/en_US.lang
+++ b/assets/minecraft/lang/en_US.lang
@@ -983,18 +983,18 @@ item.fish.clownfish.raw.name=Clownfish
 item.fish.cod.cooked.name=Cooked Like Button
 item.fish.salmon.cooked.name=Cooked Salmon
 item.record.name=Music Disc
-item.record.13.desc=C418 - 13
-item.record.cat.desc=C418 - cat
-item.record.blocks.desc=C418 - blocks
-item.record.chirp.desc=C418 - chirp
-item.record.far.desc=C418 - far
-item.record.mall.desc=C418 - mall
-item.record.mellohi.desc=C418 - mellohi
-item.record.stal.desc=C418 - stal
-item.record.strad.desc=C418 - strad
-item.record.ward.desc=C418 - ward
-item.record.11.desc=C418 - 11
-item.record.wait.desc=C418 - wait
+item.record.13.desc=Living in the Sunlight
+item.record.cat.desc=The Sex Offender Shuffle
+item.record.blocks.desc=In the Summertime
+item.record.chirp.desc=Take on Me
+item.record.far.desc=Remove Kebab
+item.record.mall.desc=What is Love
+item.record.mellohi.desc=xFiles Theme
+item.record.stal.desc=Levan Polkka
+item.record.strad.desc=Smoke Weed Everyday
+item.record.ward.desc=Curb Your Enthusiasm Theme
+item.record.11.desc=Ocean Man
+item.record.wait.desc=Mad World
 item.bone.name=Bone
 item.dyePowder.black.name=Ink Sac
 item.dyePowder.red.name=Rose Red
